--- a/W4D3/Projekat/index.html
+++ b/W4D3/Projekat/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.0/normalize.css">
     <link rel="stylesheet" href="main.css">
 
 </head>
@@ -13,22 +14,22 @@
 <body>
     <div class="wrapper">
 
-        <nav class="clearfix">
+        <nav>
             <h1><span>BUILD</span>ESTATE</h1>
-            <ul id="pozadina">
+
+            <ul>
                 <li>HOME</li>
                 <li>ABOUT</li>
                 <li>SERVICES</li>
                 <li>CONTACT US</li>
             </ul>
-
         </nav>
-        <header class="clearfix">
 
-
+        <header>
             <h2>WE SHAPE OUR BUILDINGS THEREAFTER THEY SHAPE US</h2>
             <button class="buttonFirst"><a href="#">Read More</a></button>
         </header>
+        
         <main>
             <section>
                 <h3>Who We Are</h3>
@@ -45,7 +46,7 @@
                     </ul>
                 </article>
                 <img class="sectionImg1" src="images/about.jpg" alt="stairs">
-                <article>
+                <article class="clearBoth">
                     <h4>We Make Your Dream Home</h4>
 
                     <p>"For decades engineers have stood accused that their buildings do not have any cultural value.We
@@ -76,7 +77,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque officiis recusandae deleniti sint
                         provident quam suscipit totam corporis laudantium officia.</p>
                 </article>
-                <article class="bottomArticle clearfix">
+                <article class="bottomArticle selenaGomez clearfix">
                     <img class="bottomImg" src="images/t3.jpg">
                     <h5>SELEN GOMEZ</h5>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore dicta dolorem ipsum
@@ -84,12 +85,25 @@
                 </article>
             </section>
 
-            <!-- <section class="bottomSection2 clearfix">
+            <section class="bottomSection2 clearfix">
                 <h3>Get In Touch With Us</h3>
-                <div class="greenDiv"></div>
-                <div class="redDiv"></div>
-                <div class="blueDiv"></div>
+                <div class="greenDiv">
+                        <h5>CONTACT US</h5>
+                    <img src="phone.png" alt="phone"><p>+0(12)000 123 3120</p>
+                </div>
+                <div class="redDiv">
+                        <h5>CONNECT US</h5>
+                        <img src="images/facebook.ico">
+                        <img src="images/twitter.png">
+                        <img src="images/linkedin.png">
+                        <img src="images/insta.png">
+                </div>
+                <div class="blueDiv">
+                        <h5>ADRESS</h5>
+                        <p>1680 Richmond St, Corner in, ON N58 3d7, USA</p>
+                </div>
                 <div class="houseDiv">
+                    
                     <img src="images/house.png" alt="house"> 
                 </div>
                 <iframe class="ourMap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22667.198655341464!2d20.541874738538027!3d44.75225986232172!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a7705f3741165%3A0x5c64d63984be627e!2z0JrQsNC70YPRktC10YDQuNGG0LA!5e0!3m2!1ssr!2srs!4v1540374640728"
@@ -111,7 +125,7 @@
         <footer>
 
         </footer>
- -->
+
 
 
     </div>
